# type-macro-derive-tricks

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple_test.rs
src/: lib.rs
tests/: complex_generics_test.rs  comprehensive_test.rs  debug_tokens.rs  doc_hidden_test.rs  edge_cases_test.rs  integration_test.rs  lifetime_fix_test.rs  lifetime_issue_test.rs  simple_filtered_test.rs  test_with_generics.rs  type_param_macro_test.rs  verify_doc_hidden.rs
